# robotxt

./: Cargo.toml  LICENSE.txt  README.md  lib.rs
directive/: data.rs  mod.rs  rule.rs
fetch/: mod.rs
internal/: mod.rs  parser.rs  rule.rs  rules.rs
parse/: combinator.rs  common.rs  directive.rs  lexer.rs  mod.rs  multi.rs  parser.rs  rule.rs  rules.rs  single.rs  state.rs
state/: agent.rs  common.rs  mod.rs  multi.rs  rules.rs  single.rs
state2/: mod.rs  multi.rs  single.rs
