# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "robotxt"
version = "0.1.0"
edition = "2021"

license = "MIT"
readme = "./README.md"
description = """
The implementation of the robots.txt protocol.
"""

authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
repository = "https://github.com/xwde/robotxt"
homepage = "https://github.com/xwde/robotxt"
categories = ["parser-implementations", "parsing", "web-programming"]
keywords = ["robots", "crawler", "parser"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "./lib.rs"

[features]
default = []

[dependencies]
nom = { version = "7.1.3" }
bstr = { version = "1.3.0" }
regex = { version = "1.7.1" }
url = { version = "2.3.1" }
once_cell = { version = "1.17.1" }
percent-encoding = { version = "2.2.0" }
