# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "robotxt"
version = "0.1.1"
edition = "2021"

license = "MIT"
readme = "./README.md"
description = """
The implementation of the Robots.txt (or URL exclusion) protocol.
"""

authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
repository = "https://github.com/xwde/robotxt"
homepage = "https://github.com/xwde/robotxt"
categories = ["parser-implementations", "web-programming"]
keywords = ["robots", "txt", "crawler", "parser", "builder"]

[lib]
path = "./lib.rs"

[dependencies]
nom = { version = "7.1.3" }
bstr = { version = "1.3.0" }
url = { version = "2.3.1" }
regex = { version = "1.7.1" }
once_cell = { version = "1.17.1" }
percent-encoding = { version = "2.2.0" }
